--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.2.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "next": "^10.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^13.7.4",
-    "@types/react": "^16.9.22",
-    "typescript": "^3.8.2"
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "typescript": "^4.0.5"
   }
 }
